--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -4,4 +4,8 @@
 
 <div class="container">
 
+  <div class="jumbotron"> <h1>Welcome to Seattle Salon</h1> </div>
+  
+  <h3><a href="/stylists">View a list of all the stylists currently working for Seattle Salon</a></h3>
+
 </div>
